# UL_teacher_helper

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: dependencies.py
src/Module/: Module.py  dependencies.py
ul_teacher_helper/: __init__.py  dependencies.py
ul_teacher_helper/Assessment/: Assessment.py
ul_teacher_helper/Module/: Module.py
